--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Dr.Justin Szabo</title>
   </head>
   <body>
-    <p>Future home on the web for Dr. Justin Szabo.</p>
+    <p>Future home on the web for Dr. Justin Szabo.<br>
+    Visit the <a href="rise.hs.iastate.edu">Research Institute for Studies in Education</a> for latest CV in the meantime.</p>
   </body>
 </html>
