--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <p>Future home on the web for Dr. Justin Szabo.<br>
-    Visit the <a href="rise.hs.iastate.edu">Research Institute for Studies in Education</a> for latest CV in the meantime.</p>
+    Visit the <a href="https://rise.hs.iastate.edu">Research Institute for Studies in Education</a> for latest CV in the meantime.</p>
   </body>
 </html>
