--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Dr.Justin Szabo</title>
   </head>
   <body>
-    <p>Future home on the web for Dr. Justin Szabo.<br>
-    Visit the <a href="https://www.rise.hs.iastate.edu/">Research Institute for Studies in Education</a> for latest CV in the meantime.</p>
+<h1>Welcome weary world wide web wayfarer!</h1>
+    <p>Future home on the web for Dr. Justin Szabo.<br><br>
+    Visit the <a href="https://www.rise.hs.iastate.edu/profiles/justin-szabo/">Research Institute for Studies in Education</a> for latest CV in the meantime.</p>
   </body>
 </html>
