--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <h1>Welcome, weary world wide web wayfarer!</h1>
     <p>Here resides the future home on the web for Dr. Justin Szabo.<br><br>
 
-This site is currently under construction. Please visit the <a href="https://www.rise.hs.iastate.edu/profiles/justin-szabo/">Research Institute for Studies in Education</a> for my latest CV in the meantime.<br><br>
+This site is currently under construction. Please visit the <a href="https://www.rise.hs.iastate.edu/profiles/justin-szabo/" target="_blank">Research Institute for Studies in Education</a> for my latest CV in the meantime.<br><br>
 
-If you would like to connect with me, please send me a request on <a href="https://www.linkedin.com/in/justinszabo/">LinkedIn</a> as well.<br><br>
+If you would like to connect with me, please send me a request on <a href="https://www.linkedin.com/in/justinszabo/" target="_blank">LinkedIn</a> as well.<br><br>
 
 Thank you!</p>
   </body>
