--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
-<!doctype html>
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Justin Szabo ~ 21st Century Educator, Evaluator, and Tinkerer</title>
-  </head>
-  <body>
-<h1>Welcome, weary world wide web wayfarer!</h1>
-    <p>Here resides the future home on the web for Dr. Justin Szabo.<br><br>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #333;
+            color: #fff;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1>Welcome, weary world wide web wayfarer!</h1>
+    </header>
+
+    <section>
+        <h2>Welcome to Your Homepage!</h2>
+        <p>Here resides the future home on the web for Dr. Justin Szabo.<br><br>
 
 This site is currently under construction. Please visit the <a href="https://www.rise.hs.iastate.edu/profiles/justin-szabo/" target="_blank">Research Institute for Studies in Education</a> for my latest CV in the meantime.<br><br>
 
 If you would like to connect with me, please send me a request on <a href="https://www.linkedin.com/in/justinszabo/" target="_blank">LinkedIn</a> as well.<br><br>
 
 Thank you!</p>
-  </body>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Dr. Justin Szabo. All rights reserved.</p>
+    </footer>
+</body>
+
 </html>
