--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
 <body>
     <header>
-        <h1>Welcome, weary world wide web wayfarer!</h1>
+        <h1>Dr. Justin Szabo</h1>
     </header>
 
     <section>
-        <h2>Welcome to Your Homepage!</h2>
+        <h2>Welcome, weary world wide web wayfarer!</h2>
         <p>Here resides the future home on the web for Dr. Justin Szabo.<br><br>
 
 This site is currently under construction. Please visit the <a href="https://www.rise.hs.iastate.edu/profiles/justin-szabo/" target="_blank">Research Institute for Studies in Education</a> for my latest CV in the meantime.<br><br>
