--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ This site is currently under construction. Please visit the <a href="https://www
 
 If you would like to connect with me, please send me a request on <a href="https://www.linkedin.com/in/justinszabo/" target="_blank">LinkedIn</a> as well.<br><br>
 
+A brief biography page is availabe <a href="DrSzabo.github.io/bio.html" target="_blank">here</a>.
+
 Thank you!</p>
     </section>
 
