--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
+	img {
+            float: center;
+            max-width: 50%;
+            height: auto;
+            border-radius: 8px;
+            margin-right: 20px;
+            margin-bottom: 0px;
+        }
+
         footer {
             text-align: center;
             padding: 10px;
@@ -54,6 +63,7 @@ If you would like to connect with me, please send me a request on <a href="https
 A brief biography page is under construction 	<a href="https://drszabo.github.io/bio.html">here</a>.<br><br>
 
 Thank you!</p>
+<img src="Glacier2013.jpg" alt="Going to the Sun Road - Glacier National Park">
     </section>
 
     <footer>
