--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ If you would like to connect with me, please send me a request on <a href="https
 A brief biography page is under construction 	<a href="https://drszabo.github.io/bio.html">here</a>.<br><br>
 
 Thank you!</p>
-<img src="Glacier2013.jpg" alt="Going to the Sun Road - Glacier National Park">
+<img src="Glacier2013.jpg" alt="Going to the Sun Road - Glacier National Park"><br>
+Photo credit: Szabo, J. (2013)
     </section>
 
     <footer>
