--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
+       
 	img {
-            float: center;
+            float: left;
             max-width: 50%;
             height: auto;
             border-radius: 8px;
             margin-right: 20px;
             margin-bottom: 0px;
+        }
+
+        h2 {
+            clear: both; /* Clear the float */
         }
 
         footer {
