--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Justin Szabo ~ 21st Century Educator, Evaluator, and Tinkerer</title>
+    <title>Your Biography</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,19 +23,20 @@
         section {
             max-width: 800px;
             margin: 20px auto;
-            padding: 20px;
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden; /* Clear the float */
         }
-       
-	img {
+
+        img {
             float: left;
             max-width: 50%;
             height: auto;
             border-radius: 8px;
             margin-right: 20px;
-            margin-bottom: 0px;
+            margin-bottom: 20px;
+            vertical-align: top; /* Align the top of the image */
         }
 
         h2 {
@@ -67,7 +68,9 @@ If you would like to connect with me, please send me a request on <a href="https
 A brief biography page is under construction 	<a href="https://drszabo.github.io/bio.html">here</a>.<br><br>
 
 Thank you!</p>
-
+        <img src="glacier.jpg" alt="Glacer National Park"><p>
+		Photo Credit: Szabo, J. (2013)
+	</p>
     </section>
 
     <footer>
