--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@ If you would like to connect with me, please send me a request on <a href="https
 A brief biography page is under construction 	<a href="https://drszabo.github.io/bio.html">here</a>.<br><br>
 
 Thank you!</p>
-        <img src="glacier.JPG" alt="Glacer National Park"><p>
-		Photo Credit: Szabo, J. (2013)
-	</p>
+        <img src="glacier.JPG" alt="Glacer National Park">
+	<figcaption>
+	Photo Credit: Szabo, J. (2013)
+</figcaption>
+
     </section>
 
     <footer>
