--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+r<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -30,7 +30,7 @@
         }
 
         img {
-            float: left;
+            float: center;
             max-width: 50%;
             height: auto;
             border-radius: 8px;
