--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-r<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -38,6 +38,16 @@ r<!DOCTYPE html>
             margin-bottom: 0px;
             vertical-align: top; /* Align the top of the image */
         }
+	.items{
+	    text-align:center;
+	    margin:50px auto;
+	}
+	.items figure{
+	    margin:0px 20px;
+	    display:inline-block;
+	    text-decoration:none;
+	    color:black;
+	}
 
         h2 {
             clear: both; /* Clear the float */
